# fasta2a

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
agent_frontend/: Dockerfile  entrypoint.sh  nginx.conf.template  package-lock.json  package.json
agent_frontend/archive/: config.js
agent_frontend/public/: config.js
agent_frontend/src/: App.css  App.js  App.js.old  config.js
agent_server/a2a_agent/: .dockerignore  Dockerfile  main.py  requirements.txt
docker_agents/a2a_agent/: Dockerfile  main.py  requirements.txt
docker_agents/a2a_human/: main.py  requirements.txt
docker_compositions/: airbnb-agent-compose.yml  delegator-agent-compose.yml  johndoe-agent-compose.yml  nats-server.conf  weather-agent-compose.yml
docker_compositions/airbnb_agent/: docker-compose.yml  docker-compose.yml.old
documentation/smarta2a_docs/: mkdocs.yml
examples/: __init__.py
examples/agents/: __init__.py
examples/echo_server/: curl.txt  main.py
examples/human_johndoe_agent/: main.py
examples/openai_airbnb_agent/: .dockerignore  Dockerfile  main.py
examples/openai_delegator_agent/: main.py
examples/openai_weather_agent/: main.py
fasta2a/: __init__.py  server.py  types.py
smarta2a/: __init__.py  server.py  types.py
smarta2a/agent/: a2a_agent.py  a2a_human.py  a2a_mcp_server.py
smarta2a/archive/: mcp_client.py  smart_mcp_client.py  subscription_service.py  task_service.py
smarta2a/client/: a2a_client.py  mcp_client.py  smart_mcp_client.py  tools_manager.py
smarta2a/common/: __init__.py  task_builder.py  task_request_builder.py  types.py
smarta2a/discovery_strategies/: base_discovery_strategy.py
smarta2a/file_stores/: base_file_store.py  local_file_store.py
smarta2a/history_update_strategies/: __init__.py  append_strategy.py  history_update_strategy.py  rolling_window_strategy.py
smarta2a/model_providers/: __init__.py  base_llm_provider.py  openai_provider.py
smarta2a/server/: __init__.py  handler_registry.py  json_rpc_request_processor.py  nats_client.py  request_handler.py  send_task_handler.py  server.py  state_manager.py  subscription_service.py  task_service.py  webhook_request_processor.py
tests/: __init__.py  test_server.py  test_server_history.py  test_server_history_strategy.py  test_task_request_builder.py
(+21 files in other folders)
